2003-05-31  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.h:
	* libdb/db_stat.c:
	* libdb/odb_hash.h:
	* libpp/format_output.h:
	* libpp/locate_image.h:
	* libpp/name_storage.h:
	* libpp/partition_files.h:
	* libpp/profile.h:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: improve doxygen comment

2003-05-31  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: use AC_DEFINE_UNQUOTED() to define version string
	  in config.h not in version-1.h
	* Makefile.am: distclean-local: is no longer used
	* version-1.h.in: delete
	* libutil/op_version.h:
	* libutil/op_version.c: new file: package version output
	* libutil/Makefile.am:
	* dae/oprofiled.c:
	* daemon/oprofiled.c:
	* gui/oprof_start.h:
	* libop/op_events.c:
	* libopt++/popt_options.cpp:
	* libregex/demangle_sybol.cpp:
	* module/oprofile.c:
	* utils/op_help.c: tweak # include according

2003-05-30  Dan Zink  <Dan.Zink@hp.com>

	* module/x86/op_apic.c: really disable the apic if it was disabled

2003-05-29  John Levon  <levon@movementarian.org>

	* utils/opcontrol: don't allow --rtc-value if not RTC mode

2003-05-27  John Levon  <levon@movementarian.org>

	* libutil++/string_manip.h: add <stdexcept>

	* pp/opannotate.cpp: use '\n' not endl

	* pp/opreport.cpp: untie cout

2003-05-29  Philippe Elie  <phil.el@wanadoo.fr>

	* merge with pp-interface-branch: following ChangeLog was unmerged
	  to branch

	2003-05-27  John Levon  <levon@movementarian.org>

	* configure.in: oprofile 0.5.3 is released, back to
	0.6cvs

	2003-05-26  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: update docs for --no-vmlinux

	2003-05-26  John Levon  <levon@movementarian.org>

	* libop/op_interface_25.h:
	* daemon/opd_image.c: handle tgid for future
	compatibility, fix compile on older gccs

	2003-05-26  John Levon  <levon@movementarian.org>

	* libop/op_interface_25.h: add LAST_CODE

	* daemon/opd_stats.h:
	* daemon/opd_stats.c: count short reads of
	buffer and unplacable samples
