@@ -1,3 +1,12 @@
+2003-06-01  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* dae/oprofiled.c:
+	* libop/oprofiled.c:
+	* libop/op_cpu_type.c:
+	* module/oprofile.c:
+	* module/oprofile.h:
+	* pp/opdiff.cpp: more static data and function
+
 2003-05-31  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* gui/oprof_start_util.h:
